# Comment

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  VERSION  docker-compose.yml  docker-entrypoint.sh  manage.py  requirements.txt  setup.cfg  setup.py  tox.ini  wait_for_postgres.py
.github/ISSUE_TEMPLATE/: bug_report.md  developement.md  documentation_change.md  feature_request.md
.github/workflows/: docs.yml  linters.yml  release.yml  test-release.yml  tests.yml
comment/: __init__.py  admin.py  apps.py  checks.py  context.py  exceptions.py  forms.py  messages.py  mixins.py  models.py  responses.py  tests.py  urls.py  utils.py  validators.py  views.py
comment/api/: permissions.py  serializers.py  urls.py  views.py
comment/conf/: __init__.py  defaults.py
comment/manager/: __init__.py  comments.py  reactions.py
comment/managers/: __init__.py  blocker.py  comments.py  flags.py  followers.py  reactions.py
comment/migrations/: 0001_initial.py  0002_comment_edit_date.py  0003_auto_20200419_1423.py  0004_reaction_reactioninstance.py  0005_auto_20200521_1301.py  0006_flag_flaginstance.py  0007_auto_20200620_1259.py  0008_comment_urlhash.py  0009_auto_20200811_1945.py  0010_auto_20201023_1442.py  0011_follower.py  0012_blockeduser_blockeduserhistory.py
comment/models/: __init__.py  blocker.py  comments.py  flags.py  followers.py  reactions.py
comment/service/: email.py
comment/signals/: __init__.py  post_delete.py  post_save.py  (+1 more)
docs/: Makefile  make.bat
test/: db.sqlite3  settings.py  urls.py
(+199 files in other folders)
