[metadata]
name = django-comments-dab
version = file: VERSION
author = Radico
author_email = mus.radi85@gmail.com
description = Django Comment app. It can be associated with any given model.
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Radi Mustafa
maintainer_email = mus.radi85@gmail.com
url = https://github.com/radi85/Comment
project_urls =
    Documentation=https://django-comment-dab.readthedocs.io/index.html
    Source Code=https://github.com/radi85/Comment
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
keywords = django comment comments ajax

[options]
packages = find:
include_package_data = True
install_requires = django
zip_safe = False

[options.extras_require]
markdown = markdown

[options.packages.find]
exclude =
    docs
    test*

[flake8]
exclude = .git,*migrations*,test
max-line-length = 120
